--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "@hapi/boom": "^7.4.2",
     "@hapi/hapi": "^20.1.2",
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
+    "hapi-auth-jwt2": "^10.2.0",
     "hapijs-status-monitor": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
+    "ramda": "^0.27.1",
+    "ramda-adjunct": "^2.32.0",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
@@ -27,6 +32,7 @@
     "@types/hapi": "^18.0.5",
     "@types/hapi__boom": "^7.4.0",
     "@types/hapi__joi": "^17.1.6",
+    "@types/jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
